test/activator/yaml/activator-filters.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: activator-ext-proc
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      # context omitted so that this applies to both sidecars and gateways
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.http.activator.ext_proc
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          failure_mode_allow: true
          grpc_service:
            envoy_grpc:
              cluster_name: no-op
          message_timeout: 120s

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: granite-3-8b-activator
spec:
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      routeConfiguration:
        vhost:
          name: "*:80"
          route:
            name: default.granite-3-8b.0 # TODO: what .0?
    patch:
      operation: MERGE
      value:
        typed_per_filter_config:
          envoy.filters.http.activator.ext_proc:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
            overrides:
              processing_mode:
                request_header_mode: "SEND"
                response_header_mode: "SKIP"
                request_body_mode: "NONE"
                response_body_mode: "NONE"
                request_trailer_mode: "SKIP"
                response_trailer_mode: "SKIP"
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|9002||granite-3-8b-activator.default.svc.cluster.local
