test/activator/yaml/epp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: granite-3-8b-epp
  labels:
    app: granite-3-8b-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      inferencepool: granite-3-8b-epp
  template:
    metadata:
      labels:
        inferencepool: granite-3-8b-epp
    spec:
      containers:
      - name: epp
        image: ${IMAGE_REGISTRY}/${IMAGE}:${TAG}
        args:
        - --pool-name
        - granite-3-8b-epp
        - --pool-namespace
        - default
        - --pool-group
        - inference.networking.x-k8s.io
        - --zap-encoder
        - json
        - --config-file
        - /config/default-plugins.yaml
        - --v
        - "4"
        env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 9002
          name: grpc
          protocol: TCP
        - containerPort: 9003
          name: grpc-health
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: plugins-config-volume
      serviceAccountName: epp
      volumes:
      - configMap:
          defaultMode: 420
          name: epp
        name: plugins-config-volume
