test/activator/yaml/network-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sza
  annotations:
    networking.istio.io/service-type: NodePort
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: granite-3-8b
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: sza
  rules:
    - backendRefs:
      - group: inference.networking.x-k8s.io
        kind: InferencePool
        name: granite-3-8b-epp
        port: 8000
      matches:
      - path:
          type: PathPrefix
          value: /
      timeouts:
        request: 300s
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: granite-3-8b-epp
spec:
  host: granite-3-8b-epp.default.svc.cluster.local
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: granite-3-8b-activator
spec:
  host: granite-3-8b-activator.default.svc.cluster.local
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
